# Catiles

./: .gitignore  LICENSE.txt  README.md  from_legacy.py  pyproject.toml  tile_config.json  tileset_tools.py  tools.py
bn_tileset_tools/: examples.py  main.py
bn_tileset_tools/model/: LegacyTileset.py  TileConfig.py  TileMeta_test.py  Tileset.py  TilesetTxt.py  TilesetTxt_test.py  __init__.py
bn_tileset_tools/transform/: __init__.py  decoder.py  list_tileset_ids.py  list_tileset_ids_test.py  migrate.py  split_fallback.py
bn_tileset_tools/util/: coro.py  image.py  lift_list.py
catiles/: __about__.py  examples.py  main.py
catiles/model/: TileConfig.py  TileMeta_test.py  Tileset.py  TilesetTxt_test.py
catiles/transform/: __init__.py  list_tileset_ids.py  list_tileset_ids_test.py  migrate.py  split_fallback.py
catiles/util/: __init__.py
example/tile_info/: example.json  undead.json
example/tileset/: example.json
tests/: __init__.py
tileset_tools/: __about__.py  __init__.py  list_tileset_ids.py  list_tileset_ids_test.py
tileset_tools/decompose/: fallback.py
tileset_tools/model/: LegacyTileset.py  TileConfig.py  TileConfig_test.py  TileEntry.py  TileInfo.py  TileMeta.py  TileMeta_test.py  Tileset.py  TilesetTxt.py  __init__.py  test_TilesetTxt.py
tileset_tools/transform/: __init__.py  decoder.py  list_tileset_ids.py  list_tileset_ids_test.py  migrate.py
tileset_tools/util/: __init__.py  extract_image.py  json_utils.py  lift_list.py
